Configuracion de seguridad en general